--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,17 @@
   <title>TasksManager</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+  <!-- Links -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
+
+  <!-- Scripts -->
+  <script src="https://kit.fontawesome.com/2309df0ec3.js" crossorigin="anonymous"></script>
+
+  
 </head>
 <body>
   <app-root></app-root>
