--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
   <!-- Scripts -->
   <script src="https://kit.fontawesome.com/2309df0ec3.js" crossorigin="anonymous"></script>
 
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
